Fix Machinery list height to prevent scrollbar overflow (#1933)

--- a/frontend/src/modules/machinery/components/Machinery.css
+++ b/frontend/src/modules/machinery/components/Machinery.css
@@ -8,7 +8,7 @@
 }
 
 .machinery .list-wrapper {
-    height: calc(100% - 44px);
+    height: calc(100% - 53px);
     overflow-y: auto;
 }
 
